# mlflow-template

./: .gitignore  CLAUDE.md  Dockerfile.mlflow  README.md  docker-compose.yml  mlflow.env.example  pyproject.toml  run.sh  train.py
docs/: uv-usage.md
flows/: auto_tracking_example.py  decorator_tracking.py  deploy_for_ui.py  mlflow_only_test.py  prefect_server_test.py  test_with_config.py
